# VADASM

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt
docs/: api.md  benchmarks.md
examples/: quickstart.ipynb  quickstart.py  vadasm_quickstart.ipynb
scripts/: eval_vlm.py  vmerge.py
tests/: test_merging.py
vadasm/: __init__.py  alignment.py  evolution.py  fusion.py  merger.py  utils.py  vision.py
